[package]
name = "rust-cli-exam_crossterm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = { version = "0.28.1", features = ["serde"] }
rand = { version = "0.9.0", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tui = { version = "0.19.0", features = ["crossterm", "serde"] }
