[package]
name = "a02_instance_creation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
pretty_env_logger = "0.5.0"
vulkanalia = {path ="../vulkanalia", features=["window","libloading"]}
vulkanalia-sys = {path ="../vulkanalia-sys"}
# vulkanalia-sys = {path ="../vulkanalia-sys", features=["std,no_std_error,provisional"]}
winit = "0.29.15"


# [features]

# default = ["std"]

# std = ["vulkanalia-sys/std"]
# no_std_error = ["vulkanalia-sys/no_std_error"]

# provisional = ["vulkanalia-sys/provisional"]
# window = ["raw-window-handle", "cocoa", "metal", "objc"]
