[package]

edition = "2018"

name = "vulkanalia"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.23.0"

readme = "../README.md"
license = "Apache-2.0"

description = "Vulkan bindings for Rust."

documentation = "https://docs.rs/vulkanalia"
repository = "https://github.com/KyleMayes/vulkanalia"

keywords = ["graphics", "vulkan"]
categories = ["graphics"]

[features]

default = ["std"]

std = ["vulkanalia-sys/std"]
no_std_error = ["vulkanalia-sys/no_std_error"]

provisional = ["vulkanalia-sys/provisional"]
window = [ "cocoa", "metal", "objc"]

[dependencies]
cocoa = "0.25"

libloading = { version = "0.8", optional = true }
metal = "0.27"
objc = "0.2"
raw-window-handle = { version = "0.6.0" }
vulkanalia-sys = { version = "0.23", path = "../vulkanalia-sys", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]

cocoa = { version = "0.25", optional = true }
metal = { version = "0.27", optional = true }
objc = { version = "0.2", optional = true }

[package.metadata.docs.rs]

features = ["libloading", "provisional", "window"]
