[package]
name = "font_size_style"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.2", features = ["default", "__screenshot"] }
env_logger = { version = "0.11.2", features = ["auto-color", "humantime"] }
